# kbdkid3

./: .gitignore  keyboard-layout.json  readme.md
drawings/: 033fa92f9cb181e2071ebd8f090a5f6b704a3c84_switch.dxf  hotswap.dxf  kbdkid2_pcb.dxf  switch_led_cavity.dxf
firmware/zephyr/: CMakeLists.txt  README.rst  west.yml
firmware/zephyr/.west/: config
firmware/zephyr/app/: CMakeLists.txt  prj.conf
firmware/zephyr/app/boards/xtensa/ttgo_micro32_v2/: ttgo_micro32_v2.dts
firmware/zephyr/app/src/: hog.c
firmware/zephyr/src/: main.c
gh/gerber/: board-front.gvp  board.gvp  keyboard-Back.gbl  keyboard-Front.gtl  keyboard-Mask_Back.gbs  keyboard-Mask_Front.gts  keyboard-PCB_Edges.gbr  keyboard-SilkS_Back.gbo  keyboard-SilkS_Front.gto  keyboard-SoldP_Back.gbp  keyboard-SoldP_Front.gtp  keyboard.drl  keyboard_Back.pos  keyboard_Front.pos
img/: layout.kra  layout.xcf  template.kra
models/: switch_slot.FCStd  switch_slot.FCStd1  switch_slot_right.FCStd  switch_slot_right.FCStd1  switch_slot_right2.FCStd  switch_slot_right2.FCStd1  ttgo_micro-32.FCStd  ttgo_micro-32.FCStd1
other/: Kailh_Low_Profile_v2_Rev1.kicad_mod
tools/separate_dxf_layers/: requirements.txt  separate_dxf_layers.py
zephyr/: zephyr
